[package]
name = "mux"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
clap = { version = "4.x", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
nucleo-matcher = "0.3"
chrono = "0.4"
log = "0.4"
log4rs = "1.3"
portable-pty = "0.9"
shell-words = "1"
unicode-width = "0.2"
ansi-to-tui = "8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
